# numpy-talk

./: .gitignore  CMakeLists.txt  README.md  notebook.ipynb  perf.data  setup-requirements.txt  setup.py
cpp/: operators.cpp
cpp/include/: operators.h
cpp/src/: operators.cpp  pybind.cpp
docker/: Dockerfile  entrypoint.sh
src/kuramoto/: base.py  solvers.py
